pxc/tests/test_047_expand/up1.px
public namespace up1;
import common -;
import meta m;

interface ifoo {
  public function string hoge(string x);
  public function string fuga(string x);
}

function {f} string call_func(string x)
{
  return f(x);
}

metafunction mf_str{t} m::map{m::member_functions{t}, meta::to_string};

struct {ityp} foo < ityp > {
  expand(fsym : mf_str{ityp}) {
    public function string fsym(expand(m::args{m::symbol{ityp, fsym}})) {
      string s = m::to_string{fsym};
      s.append(":");
      s.append(x);
      s.append(":");
      metafunction mf m::symbol{ityp, fsym};
      s.append(m::full_string{m::arg_types{mf}});
	// error: can not use xhoge as tmpl param
      function string xhoge(string x) {
	x.append(x);
	return x;
      }
      s.append(xhoge("abc"));
      return s;
    }
  }
}

function void test1() {
  println(m::full_string{m::member_functions{ifoo}});
  ptr{ifoo} p = make_ptr{foo{ifoo}}(foo{ifoo}());
  println(p->hoge("A"));
  println(p->fuga("B"));
}

test1();
